# doc-parser

./: .gitignore  README.md  pyproject.toml
doc_parser/: file_parser.py
