[tool.poetry]
name = "doc-parser"
version = "0.1.0"
description = ""
authors = ["Victor Costa <victorcrcosta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
mammoth = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
